--- a/angular.json
+++ b/angular.json
@@ -64,12 +64,7 @@
               "src/assets/vuexy/app-assets/js/core/app.js",
               "src/assets/vuexy/app-assets/vendors/js/extensions/toastr.min.js"
             ],
-
-            "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "outputMode": "static"
           },
           "configurations": {
             "production": {
